# mycobot_unity_ros_sharp

./: .gitignore  README.md
Assets/: mycobot.prefab  mycobot.unity
Assets/Scenes/: SampleScene.unity
Assets/URDF/mycobot_description/: package.xml
Assets/URDF/mycobot_description/meshes/dae/: link1_.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae
Assets/URDF/mycobot_description/meshes/stl/collision/: link1.prefab  link1_0.asset  link2.prefab  link2_0.asset  link3.prefab  link3_0.asset  link4.prefab  link4_0.asset  link5.prefab  link5_0.asset  link6.prefab  link6.stl  link6_0.asset  link7.prefab  link7.stl  link7_0.asset
Assets/URDF/mycobot_description/meshes/stl/visual/: base_link.dae  base_link.prefab  base_link_0.asset  link1.dae  link1.prefab  link1_0.asset  link2.dae  link2.prefab  link2_0.asset  link3.dae  link3.prefab  link3_0.asset  link3_1.asset  link4.dae  link4.prefab  link4_0.asset  link5.dae  link5.prefab  link5_0.asset  link6.dae  link6.prefab  link6_0.asset  link7.dae
Assets/URDF/mycobot_description/urdf/: color.xacro  mycobot.urdf  mycobot.urdf.xacro  mycobot.xacro
Assets/URDF/mycobot_description/urdf/Materials/: blue.mat  gray.mat  green.mat  red.mat
ProjectSettings/: ProjectSettings.asset
