<?xml version="1.0"?>
<package format="2">
  <name>mycobot_description</name>
  <version>0.0.1</version>
  <description>The mycobot_description package</description>

  <maintainer email="ryo.kabutan">Ryo Kabutan</maintainer>
  <author email="ryo.kabutan">Ryo kabutan</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>urdf</depend>
</package>
